tests/ui/consts/try-operator.stderr
error[E0635]: unknown feature `const_convert`
  --> $DIR/try-operator.rs:6:12
   |
LL | #![feature(const_convert)]
   |            ^^^^^^^^^^^^^

error[E0015]: `?` cannot determine the branch of `Result<(), ()>` in constant functions
  --> $DIR/try-operator.rs:10:9
   |
LL |         Err(())?;
   |         ^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/result.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `Result<bool, ()>` in constant functions
  --> $DIR/try-operator.rs:10:9
   |
LL |         Err(())?;
   |         ^^^^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/result.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot determine the branch of `Option<()>` in constant functions
  --> $DIR/try-operator.rs:18:9
   |
LL |         None?;
   |         ^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: `?` cannot convert from residual of `Option<()>` in constant functions
  --> $DIR/try-operator.rs:18:9
   |
LL |         None?;
   |         ^^^^^
   |
note: impl defined here, but it is not `const`
  --> $SRC_DIR/core/src/option.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0015, E0635.
For more information about an error, try `rustc --explain E0015`.
